Update privacy url

--- a/privacy.html
+++ b/privacy.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <meta name="description" content="Time to Count - Privacy Policy" />
-    <meta name="author" content="Antoine Auger" />
+    <meta name="description" content="YakaMimer - Privacy Policy" />
+    <meta name="author" content="Kévin Neves" />
     <title>Time to Count - Privacy Policy</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
 
@@ -98,7 +98,7 @@
 
     <h2 style="margin-top: 50px;">Changes</h2>
     <p>
-        This Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy at <a href="https://timetocount.antoineauger.fr/privacy.html">https://timetocount.antoineauger.fr/privacy.html</a> and update the "Last updated" date at the top of this Privacy Policy.
+        This Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy at <a href="https://kneves.github.io/static/privacy.html">https://kneves.github.io/static/privacy.html</a> and update the "Last updated" date at the top of this Privacy Policy.
     </p>
     <p>
         Please be aware that, although we endeavor provide reasonable security for information we process and maintain, no security system can prevent all potential security breaches (e.g., a zero-day attack targeting mobile Operating System – OS).
